# clibcni

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  clibcni.pc.in  clibcni.spec  config.h.in  release_notes  update-version.bash
cmake/: checker.cmake
src/: CMakeLists.txt  api.c  api.h  conf.c  conf.h  log.c  log.h  utils.c  utils.h
src/invoke/: args.c  args.h  exec.c  exec.h  invoke_errno.h  tools.c  tools.h
src/json/schema/: CMakeLists.txt
src/json/schema/schema/: defs.json  net_conf.json
src/json/schema/schema/network/: ipconfig.json
src/json/schema/src/: common_c.py  common_h.py  generate.py  headers.py  helpers.py  read_file.c  read_file.h  sources.py
src/types/: current.c  current.h  types.c  types.h
src/version/: version.c  version.h
tests/: CMakeLists.txt  api_llt.cpp  main.cpp
tests/confs/: default-invalid.conf  default.json  test-bad.conflist  test-invalid.conflist  test.conflist
tests/utils/: CMakeLists.txt  bridge  bridge-bad  constants.h  loopback
tools/: static_check
